<resources>
    <string name="app_name">WildSecured</string>

    <!--    landing page-->
    <string name="landing_slogan">Your personal wildness survival app</string>
    <!--    <string name="landing_instruction">Enter your username to get started</string>-->
    <string name="version_number">Version 1.0.1</string>
    <string name="btn_start">Get Started</string>

    <!--    navigation related-->
    <string name="nav_home">Home</string>
    <string name="nav_map">Map</string>
    <string name="nav_info">Information</string>
    <string name="nav_more">More</string>

    <!--    home page-->
    <!--    top section-->
    <string name="home_top_location">Location</string>
    <string name="home_top_hi">HI, </string>
    <string name="home_top_username">User</string>
    <string name="home_top_search_bar_hint">Get weather info for a different location</string>
    <!--    mid section-->
    <string name="home_mid_UV_title">UV is now</string>
    <string name="home_mid_UV_number">0</string>
    <string name="home_mid_UV_max_number">3</string>
    <string name="home_mid_travel_advice">Get Travel Advice</string>
    <!--    bot section-->
    <string name="home_bot_weather_desc">Partly cloudy</string>
    <string name="home_bot_min_title">Min</string>
    <string name="home_bot_day">Monday</string>
    <string name="home_bot_degree_symbol">°C</string>
    <string name="home_bot_min_number">5</string>
    <string name="home_bot_max_title">Max</string>
    <string name="home_bot_max_uv_title">UV</string>
    <string name="home_bot_max_uv_number">9.38</string>
    <string name="home_bot_max_number">15</string>
    <string name="home_bot_title_main">7 Days Weather</string>
    <string name="home_bot_title_secondary">with 7 days UV forecast</string>
    <string name="home_bot_forecast_title">Get 7 days weather forecast</string>

    <!--    info page-->
    <!--    sun info page-->
    <string name="sun_main_title">Sun Protection Advice</string>
    <string name="sun_advice_title">1. UVi reading from 1 to 2 (Low)</string>
    <string name="sun_advice_content">Sun Protection is not required.</string>
    <string name="sun_advice_title1">2. UVi reading from 3 to 5 (Moderate)</string>
    <string name="sun_advice_content1">Sun Screen, SPF 30+, Sunglasses.</string>
    <string name="sun_advice_title2">3. UVi reading from 6 to 7 (High)</string>
    <string name="sun_advice_content2">Sun Screen, SPF 30+, Sunglasses, Seek Shade.</string>
    <string name="sun_advice_title3">4. UVi reading from 8 to 10 (Very High)</string>
    <string name="sun_advice_content3">Sun Screen, SPF 30+, Sunglasses, Limit Time Outside</string>
    <string name="sun_advice_title4">5. UVi reading from 11+ (Extremely High)</string>
    <string name="sun_advice_content4">Sun Screen, SPF 30+, Sunglasses, Stay Indoor if possible.</string>

    <string name="location_set_default"><u>Click here to set as default location</u></string>

    <!--    insect advice page-->
    <string name="advice_info">
        Note: This feature only works with areas in Victoria,\n
        searching places in other states may produce incorrect results.
    </string>

    <string name="insect_main_title">Insect Information</string>
    <string name="insect_main_content">Get a list of dangerous animals you might encounter in</string>
    <string name="insect_destination">Destination</string>
    <string name="insect_select">Please select a insect group</string>
    <string name="insect_no_result">
        No dangerous insects found! You are safe!\n
        But please do not let your guard down, avoid contact with any unknown insects.
    </string>
    <!--    animal advice page-->
    <string name="animal_main_title">Animal Information</string>
    <string name="animal_main_content">Get a list of dangerous animals you might encounter in</string>
    <string name="animal_destination">Destination</string>
    <string name="animal_select">Please select a species group</string>
    <string name="animal_other_info">
        \nThese animals might not appear in your searched destination, but they are found everywhere in Australia.\nThese animals can be dangerous as attacks on humans have been recorded.
    </string>
    <string name="animal_no_result">
        No dangerous animals found! You are safe!\n
        But please do not let your guard down, avoid contact with any unknown animals.
    </string>


    <!--    clothing advice popup-->
    <string name="gear_main_title">Backpack Organizer</string>
    <string name="general_advice">To best enjoy your hiking and camping experience, we recommend you use a combination of:</string>
    <string name="clothing_advice_content">Slip on clothing that covers as much of your skin as possible.</string>
    <string name="hat_advice_content">Slap on a broad-brimmed hat that shades your face, neck and ears.</string>
    <string name="shoe_advice_content">Please put on closed toe shoes to avoid getting cuts on your feet.</string>
    <string name="sunglasses_advice_content">Slide on sunglasses.</string>
    <string name="backpack_advice_content">Use the checklist below to pack your backpack for the trip.</string>
    <string name="check_list_btn">Gear Checklist</string>

    <!--    checklist -->
    <string name="checklist_title">My Checklists</string>
    <string name="checklist_no_result">You do not have any checklists.</string>
    <string name="checklist_add_dialog_title">Please enter name for new list.</string>
    <string name="checklist_card_title">Camping List</string>
    <string name="checklist_default_number_0">0</string>
    <string name="checklist_default_number_100">100</string>
    <string name="checklist_desc_string">items checked off</string>

    <string name="category_title">My Category</string>
    <string name="category_desc_string">checked</string>
    <string name="category_no_result">You do not have anything in this list.</string>

    <string name="item_placeholder">Item 1</string>

    <!--    progress bar-->
    <string name="progress_info">Loading…</string>

    <!--    Button-->
    <string name="update">Update</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>

    <!--    map-->
    <string name="map_type_menu_default">Default</string>
    <string name="map_type_menu_satellite">Satellite</string>
    <string name="map_type_menu_terrain">Terrain</string>

    <!--    information page-->
    <string name="info_title">Wild Survival</string>
    <string name="info_medical">Medical</string>
    <string name="info_shelter">Shelter</string>
    <string name="info_tools">Tools</string>
    <string name="info_water">Water Procurement</string>
    <string name="info_food">Food Procurement</string>
    <string name="info_animal">Animals</string>
    <string name="info_plants">Survival Use of Plants</string>
    <string name="info_fire">Making Fire</string>
    <string name="info_direction">Direction Finding</string>

    <!-- markdown fragment -->
    <string name="md_title">Place Holder</string>
    <!-- water info page -->
    <string name="water_sources">Water Sources</string>
    <string name="water_still_construction">Still Construction</string>
    <string name="water_purification">Water Purification</string>
    <!-- fire info page -->
    <string name="fire_site">Site Selection and Preparation</string>
    <string name="fire_material">Fire Material Selection</string>
    <string name="fire_build">How To Build A Fire</string>
    <string name="fire_light">How To Light A Fire</string>
    <!-- direction info page -->
    <string name="direction_sun">Using the Sun and Shadows</string>
    <string name="direction_moon">Using the Moon and the Stars</string>
    <string name="direction_other">Other Methods</string>
    <!-- plant info page -->
    <string name="plant_identification">Plant Identification</string>
    <string name="plant_edibility">Edibility of Plants</string>
    <string name="plant_medicine">Plants For Medicine</string>
    <string name="plant_miscellaneous">Miscellaneous Uses of Plants</string>
    <!-- medical info page -->
    <string name="medical_maintenance">Maintenance of Health</string>
    <string name="medical_emergencies">Medical Emergencies</string>
    <string name="medical_bone">Bone and Joint Injury</string>
    <string name="medical_bites">Bites and Stings</string>
    <string name="medical_wounds">Wounds</string>
    <string name="medical_environmental">Environmental Injuries</string>

    <!--    api keys-->
    <string name="GOOGLE_API_KEY">AIzaSyDKQicQAusG5symiA4KGAUiWwDlpxQgtuk</string>
    <string name="OPENWEATHER_API_KEY">832c9987d78cef10eb4823a73e81743c</string>
    <string name="MAPBOX_API_KEY">pk.eyJ1IjoibHltODM1NiIsImEiOiJja293MGM3bDIwMWFhMndtZ2hwbTFsYXhyIn0.-V6wRsshm8vFVNXkWj6pxA</string>

    <!-- tflite -->
    <string name="tfe_ic_app_name" translation_description="Image Classification demo app [CHAR_LIMIT=40]">TFL Classify</string>
    <string name="tfe_ic_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="tfe_ic_gpu_quant_error" translation_description="Error regarding GPU support for Quant models[CHAR_LIMIT=60]">GPU does not yet supported quantized models.</string>
    <string name="tfe_ic_model" translatable="false">Model:</string>
    <string-array name="tfe_ic_models" translatable="false">
        <!--        <item>Quantized</item>-->
        <item>Float</item>
    </string-array>

    <string name="tfe_ic_device" translatable="false">Device:</string>
    <string-array name="tfe_ic_devices" translatable="false">
        <item>CPU</item>
        <!--        <item>GPU</item>-->
    </string-array>

    <string name="about_us_title">About Us</string>
    <string name="about_us">
        In order to raise the awareness of the camper and hiking lovers, we, Sunbeamers, decided to build an Android APP named wildscured. This APP is designed for those people who love camping or hiking to better plan their trip and avoid getting hurt during their trip.\n 
        It helps them to plan for the trip in advance and give them tips on being safe in nature while still able to enjoy their trip.
    </string>

    <string name="snake_title">Snake Recognizer</string>
    <string name="snake_camera">Open Camera</string>
    <string name="snake_alert">
        NOTE: Please be aware that the snake recognizer is intended to be used with the snake list below to identify a snake.Please do not refer to the snake recognizer alone to identify a snake.\n
        \nPlease stay away with any unknown wild animals as they may attack humans.\n
        \nCurrently, the snake recognizer can identify 8 common snakes in Victoria:\n
        1. Bandy-Bandy 2.Carpet Python 3.Copperhead Family 4.Coral Snake 5.Curl Snake 6.Eastern Brown Snake 7.Red-bellied Black Snake 8.Tiger Snake
    </string>

</resources>