<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/primary_bg"
    tools:context=".Activity.SunInfoActivity">

    <LinearLayout
        android:id="@+id/sunAdviceTopSection"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="20sp">
            <ImageView
                android:id="@+id/sunAdviceBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/primary_orange" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sun_main_title"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/primary_orange"
                android:fontFamily="@font/archivo_bold" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_orange"
            android:layout_marginTop="10sp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunAdviceTopSection"
        android:layout_marginBottom="5dp"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/sunAdviceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivo_bold"
                android:text="@string/sun_advice_title"
                android:textAllCaps="true"
                android:layout_margin="5dp"
                android:textColor="@color/primary_orange"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/sunAdviceContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivo_regular"
                android:text="@string/sun_advice_content"
                android:textColor="@color/primary_orange"
                android:layout_margin="5dp"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivo_bold"
                android:text="@string/sun_advice_title1"
                android:textAllCaps="true"
                android:layout_margin="5dp"
                android:textColor="@color/primary_orange"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivo_regular"
                android:text="@string/sun_advice_content1"
                android:textColor="@color/primary_orange"
                android:layout_margin="5dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivo_bold"
                android:text="@string/sun_advice_title2"
                android:textAllCaps="true"
                android:layout_margin="5dp"
                android:textColor="@color/primary_orange"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivo_regular"
                android:text="@string/sun_advice_content2"
                android:textColor="@color/primary_orange"
                android:layout_margin="5dp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivo_bold"
                android:text="@string/sun_advice_title3"
                android:textAllCaps="true"
                android:layout_margin="5dp"
                android:textColor="@color/primary_orange"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivo_regular"
                android:text="@string/sun_advice_content3"
                android:textColor="@color/primary_orange"
                android:layout_margin="5dp"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivo_bold"
                android:text="@string/sun_advice_title4"
                android:textAllCaps="true"
                android:layout_margin="5dp"
                android:textColor="@color/primary_orange"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/archivo_regular"
                android:text="@string/sun_advice_content4"
                android:textColor="@color/primary_orange"
                android:layout_margin="5dp"
                android:textSize="16sp" />
            <ImageView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/uv_index" />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>