<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".GearInfoActivity"
    android:background="@drawable/primary_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="20sp">
            <ImageView
                android:id="@+id/gearAdviceBack"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/primary_orange" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gear_main_title"
                android:textSize="24sp"
                android:layout_marginStart="100dp"
                android:textColor="@color/primary_orange"
                android:fontFamily="@font/archivo_bold" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/primary_orange"
            android:layout_marginTop="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">

        <TextView
        android:id="@+id/sunAdviceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_bold"
        android:text="@string/general_advice"
        android:textAllCaps="true"
        android:layout_margin="5dp"
        android:textColor="@color/primary_orange"
        android:textSize="18sp" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_t_shirt_24"
                    app:tint="@color/primary_orange" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clothing_advice_content"
                    android:textSize="16dp"
                    android:textColor="@color/primary_orange"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_hat_24"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"
                    app:tint="@color/primary_orange" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/hat_advice_content"
                    android:textColor="@color/primary_orange"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="@color/primary_orange"
                    android:src="@drawable/ic_shoe_24"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/shoe_advice_content"
                    android:textColor="@color/primary_orange"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_sunglasses_24"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"
                    app:tint="@color/primary_orange" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/sunglasses_advice_content"
                    android:textColor="@color/primary_orange"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_backpack_24"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"
                    app:tint="@color/primary_orange" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/backpack_advice_content"
                    android:textColor="@color/primary_orange"/>
            </LinearLayout>
    </LinearLayout>
</LinearLayout>

    <Button
        android:id="@+id/checkListBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20sp"
        android:background="@drawable/rounded_btn"
        android:textColor="@color/white"
        android:text="@string/check_list_btn"/>
</LinearLayout>