<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        app:cardElevation="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:id="@+id/list_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/archivo_bold"
                    android:textColor="@color/primary_orange"
                    android:text="@string/checklist_card_title"
                    android:textSize="18sp"
                    android:padding="5dp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primary_orange"
                android:layout_marginTop="5sp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/listCompletedItems"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/archivo_bold"
                    android:textColor="@color/primary_orange"
                    android:text="@string/checklist_default_number_0"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/archivo_bold"
                    android:textColor="@color/primary_orange"
                    android:text="of"
                    android:paddingStart="5dp"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/listTotalItems"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/archivo_bold"
                    android:textColor="@color/primary_orange"
                    android:text="@string/checklist_default_number_100"
                    android:paddingStart="5dp"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/archivo_bold"
                    android:textColor="@color/primary_orange"
                    android:text="@string/checklist_desc_string"
                    android:paddingStart="5dp"
                    android:textSize="16sp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp">
                    <ImageView
                        android:id="@+id/list_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_edit_24"
                        app:tint="@color/primary_orange" />
                    <ImageView
                        android:id="@+id/list_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_delete_24"
                        app:tint="@color/primary_orange" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>